<resources>
    <string name="app_name">AndroShopping</string>
    <string name="accept">Accept</string>
    <string name="back">Back</string>
    <string name="user">User</string>
    <string name="view">View</string>
    <string name="buy">Buy</string>
    <string name="addChart">Add to chart</string>
    <string name="autentication">Autentication</string>
    <string name="userType">example@example.com</string>
    <string name="password">Password</string>
    <string name="passwordType">**********</string>
    <string name="email">Email</string>
    <string name="recover">Recover your password</string>
    <string name="euro">\u0020€</string>
    <string name="quantity">\u0020\u0020Q:\u0020</string>
    <string name="totalPrice">Total price:\u0020</string>
    <string name="textPrice">Price:\u0020</string>
    <string name="compraCompleta">Purchase completed successfully</string>
    <string name="bought">You bought a\u0020</string>

    <string name="basicInformationTitle">Basic Information</string>

</resources>
