<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androshopping.androshopping.ListProductActivity"
    android:theme="@style/AppThemeNoBar">


    <Button
        android:id="@+id/viewProduct"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/view"
        android:theme="@style/MyButton"/>

    <Button
        android:id="@+id/addChart"
        android:layout_width="150dp"
        android:layout_below="@id/viewProduct"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/addChart"
        android:theme="@style/MyButton"/>

    <Button
        android:id="@+id/buyProducts"
        android:layout_width="150dp"
        android:layout_below="@id/addChart"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/buy"
        android:theme="@style/MyButton"/>

</RelativeLayout>
